# dyad

./: CMakeLists.txt
example/: echoserv.c
src/: dyad.c  dyad.h
